regression-tests/test-results/gcc-13/mixed-bugfix-for-ufcs-non-local.cpp.output
In file included from /home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/build/_cppfront/mixed-bugfix-for-ufcs-non-local.cpp:6:
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:13:12: error: lambda-expression in template parameter type
   13 | v0: <_: t<o.f()>> bool == false; // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |            ^~~~~~~~~~~~~~~~~~
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:13:36: error: template argument 1 is invalid
   13 | v0: <_: t<o.f()>> bool == false; // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |                                    ^
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:21:12: error: lambda-expression in template parameter type
   21 | g: <_: t<o.f()>> () = { } // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |            ^~~~~~~~~~~~~~~~~~
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:21:36: error: template argument 1 is invalid
   21 | g: <_: t<o.f()>> () = { } // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |                                    ^
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:31:12: error: lambda-expression in template parameter type
   31 | a: <_: t<o.f()>> type == bool; // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |            ^~~~~~~~~~~~~~~~~~
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:31:36: error: template argument 1 is invalid
   31 | a: <_: t<o.f()>> type == bool; // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |                                    ^
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:33:12: error: lambda-expression in template parameter type
   33 | b: <_: t<o.f()>> _ == false; // Fails on GCC ([GCC109781][]).
      |            ^~~~~~~~~~~~~~~~~~
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:33:36: error: template argument 1 is invalid
   33 | b: <_: t<o.f()>> _ == false; // Fails on GCC ([GCC109781][]).
      |                                    ^
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:21:12: error: lambda-expression in template parameter type
   21 | g: <_: t<o.f()>> () = { } // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |            ^~~~~~~~~~~~~~~~~~
/home/johel/build/cppfront/GCCDebug/regression-tests/mixed-bugfix-for-ufcs-non-local/mixed-bugfix-for-ufcs-non-local.cpp2:21:36: error: template argument 1 is invalid
   21 | g: <_: t<o.f()>> () = { } // Fails on GCC ([GCC109781][]) and Clang 12 (a lambda expression cannot appear in this context)
      |                                    ^
